@@ -1,5 +1,6 @@
 Changes in Version 1.6.7
   - node labels are now colored white for lighter nodes with theme = "gray"
+  - Added argument label.color.split
 
 Changes in Version 1.6.6
   - Fixed a bug where the diagonal of undirected graphs was counted twice in getWmat
